--- a/source/_banner.html.erb
+++ b/source/_banner.html.erb
@@ -1,4 +1,5 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/banner3.jpg);">
+
   <div class="container-banner">
     <h1>Severe Back Pain?</h1>
 
@@ -9,3 +10,5 @@
     </div>
   </div>
 </div>
+
+
