--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -6,7 +6,7 @@
     <a href="">Home</a>
   </div>
     <div class="item-b">
-    <a href="">Acount</a>
+    <%= link_to 'About', '/about.html', :relative => true %>
   </div>
     <div class="item-c">
     <a href="">Services</a>
