--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -290,3 +290,52 @@ width: 390px;
   }
 
 }
+
+.two-item-container{
+  width: 1140px;
+  height: 500px;
+  padding: 96px 0;
+  position: relative;
+  left: 10%;
+  display: flex;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+    flex-wrap: nowrap;
+    -ms-justify-content: space-between;
+    justify-content: space-between;
+
+    // background-position: center center !important;
+    // position: relative;
+    // z-index: 10;
+
+    .box-1{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+      padding: 15px;
+
+      h3{
+        color: #333333;
+        font-size: 24px;
+        margin-bottom: 24px;
+      }
+      p {
+        color: #88919e;
+        font-size: 14px;
+        margin-bottom: 24px;
+      }
+
+
+    }
+
+
+    .box-2{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+
+            img{
+        width: 100%;
+        height: 100%;
+
+      }
+    }
+}
