--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -9,7 +9,7 @@
     <%= link_to 'About', '/about.html', :relative => true %>
   </div>
     <div class="item-c">
-    <a href="">Services</a>
+    <%= link_to 'Services', '/services.html', :relative => true %>
   </div>
     <div class="item-d">
     <a href="">Blog</a>
