link single service_ blog page

--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -12,7 +12,7 @@
     <%= link_to 'Services', '/services.html', :relative => true %>
   </div>
     <div class="item-d">
-    <a href="">Blog</a>
+    <%= link_to 'Blog', '/blog.html', :relative => true %>
   </div>
     <div class="item-e">
     <a href="">Contact</a>
