--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -17,13 +17,13 @@
         <div class="panel-cell">
             <div class="panel-cell-inner">
               <div class="content-holder">
-                <a href="">
+                <a href="/single_service.html">
                   <%= image_tag("http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/child-physiotherapy-1086x650.jpg") %>
                 </a>
                 <div class="text">
                   <h3>Aquatic Therapy</h3>
                   <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-                  <a href="">Read More</a>
+                  <%= link_to 'Read More', '/single_service.html', :relative => true %>
                 </div>
               </div>
             </div>
@@ -32,14 +32,14 @@
           <div class="panel-cell">
             <div class="panel-cell-inner">
               <div class="content-holder">
-                <a href="">
+                <a href="/single_service.html">
                   <%= image_tag("http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/chronic-pain-therapy-1086x650.jpg") %>
 
                 </a>
                 <div class="text">
                   <h3>Child Physiotherapy</h3>
                   <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-                  <a href="">Read More</a>
+                  <%= link_to 'Read More', '/single_service.html', :relative => true %>
                 </div>
               </div>
             </div>
@@ -48,14 +48,14 @@
           <div class="panel-cell">
             <div class="panel-cell-inner">
               <div class="content-holder">
-                <a href="">
+                <a href="/single_service.html">
                   <%= image_tag("http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/movement-analysis-1086x650.jpg") %>
 
                 </a>
                 <div class="text">
                   <h3>Chronic Pain Therapy</h3>
                   <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-                  <a href="">Read More</a>
+                  <%= link_to 'Read More', '/single_service.html', :relative => true %>
                 </div>
               </div>
             </div>
@@ -77,14 +77,14 @@
         <div class="panel-cell">
             <div class="panel-cell-inner">
               <div class="content-holder">
-                <a href="">
+                <a href="/single_service.html">
                   <%= image_tag("http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/sports-massage-1086x650.jpg") %>
 
                 </a>
                 <div class="text">
                   <h3>Movement Analysis</h3>
                   <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-                  <a href="">Read More</a>
+                  <a href="/single_service.html">Read More</a>
                 </div>
               </div>
             </div>
@@ -93,14 +93,14 @@
           <div class="panel-cell">
             <div class="panel-cell-inner">
               <div class="content-holder">
-                <a href="">
+                <a href="/single_service.html">
                    <%= image_tag("http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/aquatic-therapy-1086x650.jpg") %>
 
                 </a>
                 <div class="text">
                   <h3>Sport Injuries</h3>
                   <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-                  <a href="">Read More</a>
+                  <a href="/single_service.html">Read More</a>
                 </div>
               </div>
             </div>
@@ -109,13 +109,13 @@
           <div class="panel-cell">
             <div class="panel-cell-inner">
               <div class="content-holder">
-                <a href="">
+                <a href="/single_service.html">
                   <%= image_tag("2.png") %>
                 </a>
                 <div class="text">
                   <h3>Sport Massage</h3>
                   <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-                  <a href="">Read More</a>
+                  <a href="/single_service.html">Read More</a>
                 </div>
               </div>
             </div>
