new design sec1-2-3-4

--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -312,7 +312,7 @@ width: 390px;
 
 .two-item-container{
   width: 1140px;
-  height: 500px;
+  height: 100vh;
   padding: 96px 0;
   position: relative;
   left: 10%;
