--- a/source/stylesheets/components/_container.scss
+++ b/source/stylesheets/components/_container.scss
@@ -1,3 +1,83 @@
+
+// ########################################################################################################
+
+.title-container{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  align-items: center;
+  // border: 1px black solid;
+  margin: 16px;
+}
+
+
+.title-container .round-title-img{
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  padding: 8px;
+}
+
+
+.title-container .title-sec-content{
+  color: #333333;
+  font-size: 14px;
+  margin-bottom: 24px;
+  padding: 8px;
+  margin-top: 20px;
+}
+
+
+.title-sec-container{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #edeef0;
+
+}
+
+
+.who-container{
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding: 12px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.who-container .who-container-item{
+  width: 20%;
+  height: 100vh;
+}
+
+.who-container-item .who-sec-img {
+  background-size: contain;
+  background-size: cover;
+  height: 95vh;
+  background-position: center;
+  padding: 6px;
+  margin: 6px;
+  position: relative;
+  border-radius: 3px;
+}
+
+.who-container-item .who-sec-content{
+  position: absolute;
+  bottom: 30px;
+  align: center;
+  padding: 16px;
+  h2{
+    color: white;
+  }
+}
+
+
+// ########################################################################################################
 .container-header-img{
   display: flex;
   justify-content: flex-start;
@@ -176,42 +256,3 @@ h3{
 }
 
 }
-
-// .container-service {
-//   display: grid;
-//   grid-template-columns: 2fr 1fr;
-//   grid-template-rows: 50px 340px 267px auto;
-//   grid-template-areas:
-//     "img-area search"
-//     "img a"
-//     "b c"
-//     "d .";
-
-
-// }
-
-// .container-service .img-area{
-// grid-area: img-area;
-//       img{
-//       grid-area: img;
-//       width: 754px;
-//       height: 459px;
-//     }
-// }
-// .container-service .search-bar{
-//   grid-area: search;
-// }
-
-//  .container-service .item-a {
-//   grid-area: a;
-// }
-// .container-service .item-b {
-//   grid-area: b;
-// }
-// .container-service .item-c {
-//   grid-area: c;
-// }
-// .container-service .item-d {
-//   grid-area: d;
-// }
-
