new design sec5-6-7

--- a/source/_who_img_cover_right.html.erb
+++ b/source/_who_img_cover_right.html.erb
@@ -1,11 +1,7 @@
-
-
-
-<%= partial "banner" %>
-
-
-
-<div class="two-item-container">
+<div class="two-item-container-nopadding">
+  <div class="box-2">
+    <%= image_tag("sample3.png") %>
+  </div>
   <div class="box-1">
     <h3>Why Quiropractica</h3>
     <p>Our team of physiotherapists boast over 100 years of combined experienced. We provide an honest and ethical physiotherapy service to the residents of London and beyond.
@@ -14,14 +10,4 @@
       Our clinic is based in the centre of London and is very easy to access for everyone. We offer a whole range of physiotherapy services no matter what injury, strain or pain you may have.
     </p>
   </div>
-  <div class="box-2">
-    <%= image_tag("1.png") %>
-  </div>
 </div>
-
-
-<%= partial "grid_title_items.html.erb" %>
-<%= partial "_who_five_sec.html.erb" %>
-<%= partial "_card_flip_section.html.erb" %>
-<%= partial "_who_img_cover_right.html.erb" %>
-<%= partial "_testimonial.html.erb" %>
