--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,3 +1,243 @@
+// ########################################################################################################
+
+
+.container-overlay-card {
+  position: relative;
+  // width: 50%;
+  margin: 20px;
+  box-shadow: 2px gray;
+}
+
+.overlay-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #88919e;
+}
+
+.container-overlay-card:hover .overlay {
+  opacity: 1;
+}
+
+.overlay-card-text {
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: left;
+}
+
+
+
+
+.card-container-testimonial{
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: baseline;
+  align-content: center;
+  height: 70vh;
+}
+
+.card-container-testimonial .card-category-testimonial{
+  margin: 80px 12px;
+  align-self: start;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: baseline;
+  align-content: center;
+  width: 390px;
+  height: 274px;
+  // border: 1px solid black;
+  // padding: 12px;
+  padding-bottom: 30px;
+}
+
+
+.card-category-testimonial .testimonial-icon{
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  align-content: flex-start;
+  height: 55px;
+  width: 390px;
+  // border: 1px solid black;
+
+  img{
+    width: 50px;
+    height: 50px;
+  }
+
+}
+
+.card-category-testimonial .testimonial-inner{
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
+  align-content: center;
+  height: 150px;
+  width: 390px;
+  // border: 1px solid black;
+   p{
+    color: #969ea9;
+    font-size: 14px;
+    line-height: 26px;
+    align-self: center;
+    padding: 10px;
+    text-align: center;
+  }
+
+}
+
+.card-category-testimonial .testimonial-meta{
+// border: 1px solid black;
+width: 390px;
+  .testimonial-author{
+    display: flex;
+    justify-content: center;
+    height: 30px;
+       p{
+            font-weight: bold;
+            color: #333333;
+            font-size: 12px;
+            line-height: 26px;
+        }
+  }
+
+  .testimonial-location{
+    display: flex;
+    justify-content: center;
+    height: 30px;
+       p{
+            font-weight: bold;
+            color: #969ea9;
+            font-size: 12px;
+            line-height: 26px;
+
+        }
+  }
+
+}
+
+.two-item-container{
+  width: 1140px;
+  height: 100vh;
+  padding: 96px 0;
+  position: relative;
+  left: 10%;
+  display: flex;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: nowrap;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+
+    .box-1{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+      padding: 15px;
+      h3{
+        color: #333333;
+        font-size: 24px;
+        margin-bottom: 24px;
+      }
+      p {
+        color: #88919e;
+        font-size: 14px;
+        margin-bottom: 24px;
+      }
+    }
+    .box-2{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+      img{
+        width: 100%;
+        height: 100%;
+      }
+    }
+}
+
+
+.two-item-container-nopadding{
+  width: 1140px;
+  height: 100vh;
+  padding: 10px 0;
+  position: relative;
+  left: 10%;
+  display: flex;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: nowrap;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+
+    .box-1{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+      height: 100%;
+      padding: 24px 0 40px 0;
+
+      h3{
+        color: #333333;
+        font-size: 24px;
+        margin-bottom: 24px;
+      }
+      p {
+        color: #88919e;
+        font-size: 14px;
+        margin-bottom: 24px;
+      }
+    }
+
+    .box-2{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+      height: 100%;
+
+      img{
+        padding: 20px 0 40px 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// ########################################################################################################
+
+
 .panel-container{
   width: 1140px;
   height: 632px;
@@ -217,144 +457,3 @@
 }
 
 
-.card-container-testimonial{
-  display: flex;
-  flex-flow: row;
-  justify-content: center;
-  align-items: baseline;
-  align-content: center;
-  height: 70vh;
-}
-
-.card-container-testimonial .card-category-testimonial{
-  margin: 80px 12px;
-  align-self: start;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
-  align-items: baseline;
-  align-content: center;
-  width: 390px;
-  height: 274px;
-  // border: 1px solid black;
-  // padding: 12px;
-  padding-bottom: 30px;
-}
-
-
-.card-category-testimonial .testimonial-icon{
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  align-content: flex-start;
-  height: 55px;
-  width: 390px;
-  // border: 1px solid black;
-
-  img{
-    width: 50px;
-    height: 50px;
-  }
-
-}
-
-.card-category-testimonial .testimonial-inner{
-  display: flex;
-  justify-content: space-around;
-  align-items: baseline;
-  align-content: center;
-  height: 150px;
-  width: 390px;
-  // border: 1px solid black;
-   p{
-    color: #969ea9;
-    font-size: 14px;
-    line-height: 26px;
-    align-self: center;
-    padding: 10px;
-    text-align: center;
-  }
-
-}
-
-.card-category-testimonial .testimonial-meta{
-// border: 1px solid black;
-width: 390px;
-  .testimonial-author{
-    display: flex;
-    justify-content: center;
-    height: 30px;
-
-       p{
-            font-weight: bold;
-            color: #333333;
-            font-size: 12px;
-            line-height: 26px;
-
-        }
-
-  }
-
-  .testimonial-location{
-    display: flex;
-    justify-content: center;
-    height: 30px;
-       p{
-            font-weight: bold;
-            color: #969ea9;
-            font-size: 12px;
-            line-height: 26px;
-
-        }
-  }
-
-}
-
-.two-item-container{
-  width: 1140px;
-  height: 100vh;
-  padding: 96px 0;
-  position: relative;
-  left: 10%;
-  display: flex;
-  align-items: center;
-  -ms-flex-wrap: wrap;
-    flex-wrap: nowrap;
-    -ms-justify-content: space-between;
-    justify-content: space-between;
-
-    // background-position: center center !important;
-    // position: relative;
-    // z-index: 10;
-
-    .box-1{
-      width: 50%;
-      width: calc(50% - (.5*30px));
-      padding: 15px;
-
-      h3{
-        color: #333333;
-        font-size: 24px;
-        margin-bottom: 24px;
-      }
-      p {
-        color: #88919e;
-        font-size: 14px;
-        margin-bottom: 24px;
-      }
-
-
-    }
-
-
-    .box-2{
-      width: 50%;
-      width: calc(50% - (.5*30px));
-
-            img{
-        width: 100%;
-        height: 100%;
-
-      }
-    }
-}
