last: contact added

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,11 +8,15 @@
 <div class="two-item-container">
   <div class="box-1">
     <h3>Why Quiropractica</h3>
-    <p>Our team of physiotherapists boast over 100 years of combined experienced. We provide an honest and ethical physiotherapy service to the residents of London and beyond.
-    </p>
     <p>
-      Our clinic is based in the centre of London and is very easy to access for everyone. We offer a whole range of physiotherapy services no matter what injury, strain or pain you may have.
+      La quiropráctica es esa profesión sanitaria especializada en la relación entre la columna vertebral y el sistema nerviosos, y de la detección y corrección de esos trastornos a nivel musculo/esquelético que pueden afectar nuestra salud.
+
+El objetivo es el conseguimiento de un correcto funcionamiento del sistema nervioso, con el fin de optimizar la capacidad de adaptación del nuestro cuerpo a situaciones de estrés físico, emocionales y químicos.
+
+La nuestra columna vertebral funge de defensa mecánica de nuestro sistema nervioso atreves de sus vertebras, cuando estas se pierden su alineación original generando un bloqueo que puede afectar la funcionalidad del sistema nervioso.
+
     </p>
+
   </div>
   <div class="box-2">
     <%= image_tag("1.png") %>
@@ -25,3 +29,4 @@
 <%= partial "_card_flip_section.html.erb" %>
 <%= partial "_who_img_cover_right.html.erb" %>
 <%= partial "_testimonial.html.erb" %>
+<%= partial "_contact.html.erb" %>
