some ui changes

--- a/source/_grid_title_items.html.erb
+++ b/source/_grid_title_items.html.erb
@@ -12,7 +12,36 @@
 
     <div class="col-s-12 col-md-4">
       <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
+        <%= image_tag("1.png", class: "round-title-img")%>
+        <p class="title-sec-content">
+          Our clinic is based in the centre of London and is very
+        </p>
+      </div>
+    </div>
+
+    <div class="col-s-12 col-md-4">
+      <div class="title-container">
+        <%= image_tag("sample2.png", class: "round-title-img")%>
+        <p class="title-sec-content">
+          Our clinic is based in the centre of London and is very
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-s-12 col-md-4">
+      <div class="title-container">
+        <%= image_tag("sample1.png", class: "round-title-img")%>
+        <p class="title-sec-content">
+          Our clinic is based in the centre of London and is very
+        </p>
+      </div>
+    </div>
+
+    <div class="col-s-12 col-md-4">
+      <div class="title-container">
+        <%= image_tag("sample3.png", class: "round-title-img")%>
         <p class="title-sec-content">
           Our clinic is based in the centre of London and is very
         </p>
@@ -32,7 +61,7 @@
   <div class="row">
     <div class="col-s-12 col-md-4">
       <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
+        <%= image_tag("1.png", class: "round-title-img")%>
         <p class="title-sec-content">
           Our clinic is based in the centre of London and is very
         </p>
@@ -41,7 +70,7 @@
 
     <div class="col-s-12 col-md-4">
       <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
+        <%= image_tag("sample1.png", class: "round-title-img")%>
         <p class="title-sec-content">
           Our clinic is based in the centre of London and is very
         </p>
@@ -50,36 +79,7 @@
 
     <div class="col-s-12 col-md-4">
       <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
-        <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-s-12 col-md-4">
-      <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
-        <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
-        </p>
-      </div>
-    </div>
-
-    <div class="col-s-12 col-md-4">
-      <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
-        <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
-        </p>
-      </div>
-    </div>
-
-    <div class="col-s-12 col-md-4">
-      <div class="title-container">
-        <%= image_tag("2.png", class: "round-title-img")%>
+        <%= image_tag("sample2.png", class: "round-title-img")%>
         <p class="title-sec-content">
           Our clinic is based in the centre of London and is very
         </p>
