--- a/source/stylesheets/components/_container.scss
+++ b/source/stylesheets/components/_container.scss
@@ -7,15 +7,20 @@
   flex-wrap: nowrap;
   align-items: center;
   // border: 1px black solid;
-  margin: 16px;
+  background: white;                         /* White background */
+  padding: 20px;                             /* Internal space */
+  border-radius: 4px;                        /* Small radius */
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  margin: 12px;
 }
 
 
 .title-container .round-title-img{
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  padding: 8px;
+  width: 80px;
+  height: 80px;
+  // padding: 8px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
 
@@ -24,7 +29,9 @@
   font-size: 14px;
   margin-bottom: 24px;
   padding: 8px;
-  margin-top: 20px;
+  // margin-top: 20px;
+  margin: 0 auto;
+  line-height: 16px;
 }
 
 
@@ -51,8 +58,17 @@
 }
 
 .who-container .who-container-item{
+  background-size: cover;
+  background-position: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 20%;
-  height: 100vh;
+  height: 90vh;
+  padding: 5px;
 }
 
 .who-container-item .who-sec-img {
