some changes till sec4

--- a/source/_grid_title_items.html.erb
+++ b/source/_grid_title_items.html.erb
@@ -1,3 +1,13 @@
+<div class="container-header-white">
+  <div>
+    <p>
+    POR QUÉ
+  </p>
+  </div>
+  <div class="line">
+  </div>
+</div>
+
 <div class="title-sec-container">
 <div class="container ">
   <div class="row">
@@ -5,7 +15,7 @@
       <div class="title-container">
         <%= image_tag("2.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+         Tener más movilidad
         </p>
       </div>
     </div>
@@ -14,7 +24,7 @@
       <div class="title-container">
         <%= image_tag("1.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Menos tensión muscular
         </p>
       </div>
     </div>
@@ -23,7 +33,7 @@
       <div class="title-container">
         <%= image_tag("sample2.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Reducir el uso de fármacos y cirugía
         </p>
       </div>
     </div>
@@ -34,7 +44,7 @@
       <div class="title-container">
         <%= image_tag("sample1.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Mejorar tu postura
         </p>
       </div>
     </div>
@@ -43,7 +53,7 @@
       <div class="title-container">
         <%= image_tag("sample3.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Mejorar tu rendimiento físico y mental
         </p>
       </div>
     </div>
@@ -52,7 +62,7 @@
       <div class="title-container">
         <%= image_tag("2.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Reducir tus dolores de cabeza
         </p>
       </div>
     </div>
@@ -63,7 +73,7 @@
       <div class="title-container">
         <%= image_tag("1.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Más vitalidad y menos estrés
         </p>
       </div>
     </div>
@@ -72,7 +82,7 @@
       <div class="title-container">
         <%= image_tag("sample1.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Sentirte bien con tu cuerpo y mente
         </p>
       </div>
     </div>
@@ -81,7 +91,7 @@
       <div class="title-container">
         <%= image_tag("sample2.png", class: "round-title-img")%>
         <p class="title-sec-content">
-          Our clinic is based in the centre of London and is very
+          Reducir procesos inflamatorios
         </p>
       </div>
     </div>
