--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,21 +1,24 @@
 <div class="nav-container">
   <div class="nav-logo">
-    <%= image_tag("logo.png", class: "logo-navbar") %>
+    <%= image_tag("logo_ho2.png", class: "logo-navbar") %>
   </div>
   <div class="item-a">
-    <a href="">Home</a>
+    <a href="">QUE ÉS</a>
   </div>
     <div class="item-b">
-    <%= link_to 'About', '/about.html', :relative => true %>
+    <%= link_to 'POR QUÉ', '/about.html', :relative => true %>
   </div>
     <div class="item-c">
-    <%= link_to 'Services', '/services.html', :relative => true %>
+    <%= link_to 'PARA QUIÉN', '/services.html', :relative => true %>
   </div>
     <div class="item-d">
-    <%= link_to 'Blog', '/blog.html', :relative => true %>
+    <%= link_to 'COMO', '/blog.html', :relative => true %>
   </div>
-    <div class="item-e">
-    <a href="">Contact</a>
+  <div class="item-e">
+    <%= link_to 'SOBRE MÍ', '/blog.html', :relative => true %>
+  </div>
+    <div class="item-f">
+    <a href="">CONTACTO</a>
   </div>
     <div class="nav-btn btn-main-lrg">
      <a href="" > Book Appointment </a>
