--- a/source/_banner.html.erb
+++ b/source/_banner.html.erb
@@ -1,4 +1,21 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/banner3.jpg);">
+
+<div id="slideshow">
+   <div>
+       <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./images/sec1-1.jpg);">
+
+  <div class="container-banner">
+    <h1>Severe Back Pain?</h1>
+
+      <p> Mientras que otras profesiones se preocupan por cambiar el entorno para que se adapte al cuerpo debilitado, la quiropráctica se preocupa por fortalecer el cuerpo para adaptarlo al entorno</p>
+
+    <div class="btn-main-lrg">
+      <a href="#">Book Appointment</a>
+    </div>
+  </div>
+</div>
+   </div>
+   <div>
+      <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./images/sec1-2.jpg);">
 
   <div class="container-banner">
     <h1>Severe Back Pain?</h1>
@@ -10,5 +27,38 @@
     </div>
   </div>
 </div>
+
+   </div>
+   <div>
+       <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./images/sec1-3.jpg);">
+
+  <div class="container-banner">
+    <h1>Severe Back Pain?</h1>
+
+      <p> Book an appointment with one of our expert physiotherapists today and begin the journey to a pain free life</p>
+
+    <div class="btn-main-lrg">
+      <a href="#">Book Appointment</a>
+    </div>
+  </div>
+</div>
+   </div>
+</div>
+
+
+
+<script>
+
+$("#slideshow > div:gt(0)").hide();
+
+setInterval(function() {
+  $('#slideshow > div:first')
+    .fadeOut(1000)
+    .next()
+    .fadeIn(1000)
+    .end()
+    .appendTo('#slideshow');
+},  3000);
+</script>
 
 
