--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,3 +1,25 @@
+
+
+
+#slideshow {
+
+  background-size: contain;
+  background-size: cover;
+  height: 83vh;
+  background-position: center;
+  padding: 150px 0;
+  position: relative;
+}
+
+#slideshow > div {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+}
+
+
 .banner {
   background-size: contain;
   background-size: cover;
@@ -9,7 +31,7 @@
 
 .container-banner{
   position: absolute;
-  top: 150px;
+  top: 350px;
   left: 170px;
 }
 
