--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -2,11 +2,12 @@
 
 
 .container-overlay-card {
+  display: flex;
   position: relative;
   // width: 50%;
   // margin: 20px;
   // box-shadow: 2px gray;
-
+  height:330px;
    background: white;                         /* White background */
   // padding: 20px;                             /* Internal space */
   border-radius: 4px;                        /* Small radius */
@@ -15,9 +16,12 @@
 }
 
 .overlay-img {
+  align-self: baseline;
+  margin: 60px 0;
   display: block;
   width: 100%;
   height: auto;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .overlay {
@@ -49,11 +53,15 @@
   color: #333333;
   font-size: 14px;
   position: absolute;
-  top: 50%;
-  left: 40%;
+  top: 35%;
+  left: 45%;
+  line-height: 25px;
+  // margin-top: 18px;
+  // margin-left: 18px;
+  width: 80%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -30%);
   text-align: left;
 }
 
@@ -152,8 +160,11 @@ width: 390px;
 
 .two-item-container{
   width: 1140px;
-  height: 100vh;
-  padding: 96px 0;
+  height: 80vh;
+  padding: 96px 100px;
+  margin-bottom: 50px;
+  border-radius: 4px;
+  background-color: #ddf2f3;
   position: relative;
   left: 10%;
   display: flex;
@@ -167,15 +178,17 @@ width: 390px;
       width: 50%;
       width: calc(50% - (.5*30px));
       padding: 15px;
-      h3{
+      h4{
         color: #333333;
-        font-size: 24px;
+        font-weight: 400;
+        font-size: 22px;
         margin-bottom: 24px;
       }
       p {
         color: #88919e;
         font-size: 14px;
         margin-bottom: 24px;
+        text-align: justify;
       }
     }
     .box-2{
@@ -184,9 +197,11 @@ width: 390px;
       img{
         width: 100%;
         height: 100%;
+        padding-right: 10px;
       }
     }
 }
+
 
 
 .two-item-container-nopadding{
@@ -408,22 +423,25 @@ width: 390px;
   align-items: baseline;
   align-content: center;
   background-color: #b4d4ec;
-  height: 95vh;
-  width: 100%;
+  height: 80vh;
+  width: 90vw;
   position: relative;
-  margin: 0;
+  margin-right: 70px;
+  margin-left: 70px;
+  margin-bottom: 60px;
+  border-radius: 3px;
 }
 
 .card-container-blu .card-category-sm{
-  margin: 12px 12px;
+  margin: 24px 24px;
   align-self: start;
   display: flex;
   flex-flow: column;
-  justify-content: space-around;
+  justify-content: start;
   align-items: baseline;
   align-content: center;
-  width: 360px;
-  height: 260px;
+  width: 380px;
+  height: 130px;
   background-color: white;
   position: relative;
 }
@@ -434,11 +452,13 @@ width: 390px;
   justify-content: start;
   align-items: start;
   align-content: start;
-  height: 49px;
+  height: 55px;
   width: 265px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
   img{
-      margin-top: 20px;
+    // margin-top: 5px;
     width: 55px;
     height: 55px;
   }
@@ -452,11 +472,10 @@ width: 390px;
   align-items: start;
   align-content: start;
   width: 265px;
-  padding-bottom: 25px;
+  padding-bottom: 5px;
 
   h4{
-    font-size: 20px;
-    font-weight: bold;
+    font-weight: 400;
     font-size: 18px;
     line-height: 26px;
     color: #333333;
