--- a/source/stylesheets/components/_container.scss
+++ b/source/stylesheets/components/_container.scss
@@ -20,6 +20,7 @@
   width: 80px;
   height: 80px;
   // padding: 8px;
+  margin-right: 30px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
@@ -28,20 +29,22 @@
   color: #333333;
   font-size: 14px;
   margin-bottom: 24px;
-  padding: 8px;
+  // padding: 8px;
   // margin-top: 20px;
-  margin: 0 auto;
+  // margin: 0 auto;
+  margin-right:30px;
+  margin-top:30px;
   line-height: 16px;
 }
 
 
 .title-sec-container{
-  height: 100vh;
+  height: 80vh;
   width: 100vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #edeef0;
+  background-color: white;
 
 }
 
@@ -134,6 +137,12 @@
   margin-left: 40px;
 }
 
+
+
+
+
+
+
 // ########################################################################################################
 .container-header-img{
   display: flex;
@@ -177,7 +186,7 @@
 .line{
   align-self: center;
   width: 100px;
-  border-bottom: 4px solid #2d8ccc;
+  border-bottom: 4px solid #2f87cf;
   border-radius: 5px;
 }
 
@@ -189,7 +198,7 @@
   align-items: center;
   align-content: center;
   background-color: white;
-  height: 9em;
+  height: 20vh;
   padding-bottom: 50px;
 }
 
