--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -2,10 +2,11 @@
 
 .nav-container {
   display: grid;
-  grid-template-columns: 24em auto 4.4em 5.3em 5.5em 3.8em 5em 12.25em 8.8em;
+  grid-template-columns: 24em auto 4.9em 5.8em 7em 3.6em 6.5em 5.2em 12.25em 4.8em;
+  // grid-template-columns: 24em auto 5.4em 5.3em 5.5em 3.8em 5em 12.25em 8.8em;
   grid-auto-rows: 120px;
   grid-template-areas:
-    "logo . a b c d e btn . ";
+    "logo . a b c d e f btn . ";
   // grid-gap: 1em;
   align-items: center;
   align-content: center;
@@ -17,8 +18,8 @@
   // grid-column: 1;
   grid-area: logo;
     img {
-      width: 100px;
-      height: 80px;
+      width: 250px;
+      height: 100%;
     }
 }
 
@@ -29,10 +30,14 @@
     padding-left: 5px;
     padding-right: 5px;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 300;
     margin: 30px 10px;
-    color: #88919e;
+    color: #333333;
     font-family: sans-serif;
+  }
+
+  a:hover {
+    opacity: .6;
   }
 }
 
@@ -45,21 +50,31 @@
 .nav-container .item-b{
   // grid-column: 3;
   grid-area: b;
+  justify-self: center;
 }
 
 .nav-container .item-c{
   // grid-column: 4;
   grid-area: c;
+  justify-self: center;
 }
 
 .nav-container .item-d{
   // grid-column: 5;
   grid-area: d;
+  justify-self: center;
 }
 
 .nav-container .item-e{
-  grid-column: 6;
+  // grid-column: 6;
   grid-area: e;
+}
+
+
+.nav-container .item-f{
+  // grid-column: 6;
+  grid-area: f;
+  justify-self: center;
 }
 
 
