some changes till sec4

--- a/source/_sec4.html.erb
+++ b/source/_sec4.html.erb
@@ -1,10 +1,36 @@
+
+
+<div class="container-header-white">
+  <div>
+    <p>
+    PARA QUIÉN
+  </p>
+  </div>
+  <div class="line">
+  </div>
+</div>
+
+
 <div class="who-container">
   <div class="container ">
     <div class="row">
+            <div class="col-s-12 col-md-4">
+        <div class="container-overlay-card-noshade">
+
+
+          <div  style="opacity: 1;">
+            <div class="overlay-card-text">
+              <p style="text-align: justify;">La quiropráctica está dirigida a todo el mundo, independientemente de su edad, y no únicamente a quienes padecen dolor de espalda. De hecho, todas aquellas personas que dan importancia a su salud y/o que quieren mejorar su estilo y calidad de vida deberían acudir a un quiropráctico. Los beneficios más notorios de la quiropráctica son:</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-s-12 col-md-4">
-        <div class="container-overlay-card">
-          <%= image_tag("http://demo.devclick.uk/veronica/wp-content/uploads/2017/03/child-physiotherapy-1086x650.jpg", class: "overlay-img")%>
-          <div class="overlay">
+        <div class="container-overlay-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/kid3.jpg)">
+              Bebés y niños
+
+
+        <div class="overlay">
             <div class="overlay-card-text">
               <ul>
                 <li>Cólicos</li>
@@ -23,51 +49,77 @@
       </div>
 
       <div class="col-s-12 col-md-4">
-        <div class="container-overlay-card">
-          <%= image_tag("sec2-1.jpg", class: "overlay-img")%>
+        <div class="container-overlay-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/adult.jpg)">
+              Adultos
+
           <div class="overlay">
-            <div class="overlay-card-text">Book an appointment with one of our expert physiotherapists</div>
+            <div class="overlay-card-text">
+              <ul>
+                <li>Mejora la biomecánica de la columna vertebral reduciendo tensiones musculares</li>
+                <li>Disminución notable del estrés y aumento de la concentración y la productividad</li>
+                <li>Mayor capacidad de adaptación a situaciones de estrés físico y emocional</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-s-12 col-md-4">
-        <div class="container-overlay-card">
-          <%= image_tag("2.png", class: "overlay-img")%>
-          <div class="overlay">
-            <div class="overlay-card-text">Book an appointment with one of our expert physiotherapists</div>
-          </div>
-        </div>
-      </div>
+
     </div>
 
     <div class="row">
       <div class="col-s-12 col-md-4">
-        <div class="container-overlay-card">
-          <%= image_tag("2.png", class: "overlay-img")%>
+        <div class="container-overlay-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/age.jpg)">
+              Tercera Edad
+
           <div class="overlay">
-            <div class="overlay-card-text">Book an appointment with one of our expert physiotherapists</div>
+            <div class="overlay-card-text">
+              <ul>
+                <li>Disminuye síntomas derivados de la edad</li>
+                <li>Mejora la calidad de vida en personas mayores</li>
+                <li>Ayuda a reducir procesos inflamatorios</li>
+                <li>Ayuda a mantener y a mejorar la movilidad</li>
+                <li>Reduce la necesidad de fármacos</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="col-s-12 col-md-4">
-        <div class="container-overlay-card">
-          <%= image_tag("2.png", class: "overlay-img")%>
+        <div class="container-overlay-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/sportive.jpg)">
+              Deportivos
+
           <div class="overlay">
-            <div class="overlay-card-text">Book an appointment with one of our expert physiotherapists</div>
+            <div class="overlay-card-text">
+              <ul>
+                <li>Aumenta el rendimiento deportivo</li>
+                <li>Acelera la recuperación de las lesiones</li>
+                <li>Aumenta los reflejos y la agilidad</li>
+                <li>Reduce las lesiones musculares y articulares</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="col-s-12 col-md-4">
-        <div class="container-overlay-card">
-          <%= image_tag("2.png", class: "overlay-img")%>
+        <div class="container-overlay-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/pregnant.jpg)">
+              Embarazadas
+
           <div class="overlay">
-            <div class="overlay-card-text">Book an appointment with one of our expert physiotherapists</div>
+            <div class="overlay-card-text">
+              <ul>
+                <li>reduce los dolores provocados por el aumento de peso y el cambio postural.</li>
+                <li>prepara tu cuerpo para el parto, facilitando la correcta colocación del bebé,</li>
+                <li>ayuda a  conseguir un vientre mas elástico y sin tensiones que podrían resultar molestas para ti y tu bebé. </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
+
+
     </div>
   </div>
 </div>
