--- a/source/_sec3.html.erb
+++ b/source/_sec3.html.erb
@@ -9,85 +9,66 @@
 </div>
 
 
-<div class="card-container-blu">
-  <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Tener más movilidad</h4>
-    </div>
+
+
+
+
+<div class="cards">
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg1.jpg)">
+    Tener más movilidad
   </div>
 
-  <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy2.svg") %>
-    </div>
-    <div class="content">
-      <h4> Menos tensión muscular</h4>
-    </div>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg2.jpg)">
+    Menos tensión muscular
   </div>
 
-  <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Reducir el uso de fármacos y cirugía</h4>
-    </div>
-  </div>
-
-  <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy2.svg") %>
-    </div>
-    <div class="content">
-      <h4> Mejorar tu postura</h4>
-    </div>
-  </div>
-
-  <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Mejorar tu rendimiento físico y mental</h4>
-    </div>
-  </div>
-
-  <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Reducir tus dolores de cabeza</h4>
-    </div>
-  </div>
-
-    <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Más vitalidad y menos estrés</h4>
-    </div>
-  </div>
-
-    <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Sentirte bien con tu cuerpo y mente</h4>
-    </div>
-  </div>
-
-    <div class="card-category-sm">
-    <div class="img-sm">
-      <%= image_tag("therapy.svg") %>
-    </div>
-    <div class="content">
-      <h4> Reducir procesos inflamatorios </h4>
-    </div>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg3.jpg)">
+    Reducir el uso de fármacos y cirugía
   </div>
 </div>
+<div class="cards">
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg1.jpg)">
+    Mejorar tu postura
+  </div>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg2.jpg)">
+   <p>Mejorar tu rendimiento físico y mental</p>
+  </div>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg3.jpg)">
+    Reducir tus dolores de cabeza
+  </div>
+</div>
+
+<div class="cards">
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg1.jpg)">
+    Más vitalidad y menos estrés
+  </div>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg2.jpg)">
+    Sentirte bien con tu cuerpo y mente
+  </div>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/bg3.jpg)">
+    Reducir procesos inflamatorios
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
