--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,23 +1,42 @@
 // ########################################################################################################
 
-
 .container-overlay-card {
-  display: flex;
-  position: relative;
-  // width: 50%;
-  // margin: 20px;
-  // box-shadow: 2px gray;
-  height:330px;
-   background: white;                         /* White background */
-  // padding: 20px;                             /* Internal space */
-  border-radius: 4px;                        /* Small radius */
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  background-size: cover;
+  background-position: center;
+  height: 330px;
   margin: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  position: relative;
+}
+
+.container-overlay-card-noshade {
+  background-size: cover;
+  background-position: center;
+  height: 330px;
+  margin: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  position: relative;
 }
 
 .overlay-img {
   align-self: baseline;
-  margin: 60px 0;
+  // margin: 60px 0;
   display: block;
   width: 100%;
   height: auto;
@@ -34,14 +53,9 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  // background-color: #88919e;
-
-  background: white;                         /* White background */
-  // padding: 20px;                             /* Internal space */
+  background: white;                         /* White background */                          /* Internal space */
   border-radius: 4px;                        /* Small radius */
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
-  // margin: 12px;
-
 
 }
 
@@ -58,11 +72,19 @@
   line-height: 25px;
   // margin-top: 18px;
   // margin-left: 18px;
-  width: 80%;
+  width: 90%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -30%);
   text-align: left;
+
+  ul{
+
+    list-style: circle outside none;
+
+
+  margin-left: 20px;
+  }
 }
 
 
@@ -249,8 +271,68 @@ width: 390px;
 }
 
 
+.card-category {
+  background-size: cover;
+  background-position: center;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 8px;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  // margin-bottom: 30px;
+  // padding-bottom: 30px;
+}
 
 
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100px;
+  gap: 20px;
+  // margin-bottom: 30px;
+  padding: 30px;
+}
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
 
 
 
