done sec: 1-2-4-tes

--- a/source/_testimonial.html.erb
+++ b/source/_testimonial.html.erb
@@ -12,7 +12,14 @@
 <div class="card-container-testimonial">
   <div class="card-category-testimonial">
     <div class="testimonial-icon">
-      <%= image_tag("profile.svg") %>
+      <%= image_tag("https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large") %>
+    </div>
+    <div class="testimonial-icon">
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star unchecked"></span>
     </div>
     <div class="testimonial-inner">
       <p>
@@ -35,7 +42,14 @@
 
   <div class="card-category-testimonial">
     <div class="testimonial-icon">
-      <%= image_tag("profile.svg") %>
+      <%= image_tag("https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large") %>
+    </div>
+    <div class="testimonial-icon">
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
     </div>
     <div class="testimonial-inner">
       <p>
@@ -58,7 +72,14 @@
 
   <div class="card-category-testimonial">
     <div class="testimonial-icon">
-      <%= image_tag("profile.svg") %>
+      <%= image_tag("https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large") %>
+    </div>
+      <div class="testimonial-icon">
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star unchecked"></span>
     </div>
     <div class="testimonial-inner">
       <p>
