--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,9 +9,8 @@
 <%= partial "sec3.html.erb" %>
 <%= partial "_grid_title_items.html.erb" %>
 <%= partial "_sec4.html.erb" %>
+<%= partial "_sec5.html.erb" %>
 
-<%= partial "_who_five_sec.html.erb" %>
-<%= partial "_card_flip_section.html.erb" %>
-<%= partial "_who_img_cover_right.html.erb" %>
+
 <%= partial "_testimonial.html.erb" %>
 <%= partial "_contact.html.erb" %>
