--- a/source/_sec2.html.erb
+++ b/source/_sec2.html.erb
@@ -15,17 +15,67 @@ La quiropráctica es la profesión sanitaria especializada en la relación en
 </p>
 <h4>Cuál es la finalidad de la quiropráctica</h4>
 <p>
-
-  El objetivo es conseguir un correcto funcionamiento del sistema nervioso con el fin de optimizar la capacidad de adaptación de nuestro cuerpo a situaciones de estrés físico, emocional y químico.
-La columna vertebral hace de defensa mecánica del sistema nervioso a través de las vértebras. Cuando éstas pierden su alineación original se genera un bloqueo que puede afectar la óptima funció del sistema nervioso.
+El principal objetivo de la quiropráctica es conseguir un óptimo funcionamiento de nuestro sistema nervioso para garantizarnos la correcta adaptación de nuestro organismo a situaciones de estrés físico, emocional y mental y químico.
+La columna vertebral es la única defensa del sistema nervioso; por este motivo, cuando las vértebras pierden su alineación natural se origina un bloqueo que afecta a la comunicación entre tu cerebro y el resto de tu cuerpo.
 
 </p>
 
 
   </div>
-  <div class="box-2">
-    <%= image_tag("sec2-1.jpg") %>
+   <div class="box-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/sec2-1.jpg)">
   </div>
+
+
 </div>
 
+<div class="two-item-container-nopadding">
+   <div class="box-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./images/adult.jpg)">
+  </div>
+  <div class="box-1">
+
+<h4>Por qué elegir el cuidado quiropráctico</h4>
+<p>
+Recibir el cuidado quiropráctico es una sana y saludable elección para mejorar el rendimiento de tu organismo a todos los niveles. Además, se consigue de una forma no invasiva, sin el uso de químicos que afectan a otras funciones de tu cuerpo. La quiropráctica no se centra en el síntoma ni en una zona concreta del cuerpo. La quiropráctica contempla la salud de una forma global, y así como ayuda a reducir la inflamación y, por ende, el dolor, también va a mejorar muchas otras funciones que hasta ahora quizá te habían pasado desapercibidas.
+
+Un columna vertebral sana se traduce en:
+<ul>
+  <li>
+    Mejora de la movilidad
+  </li>
+    <li>
+    Disminución de la tensión muscular
+  </li>
+    <li>
+    Reducción del uso de fármacos y cirugía
+  </li>
+    <li>
+    Mejora de la postura corporal
+  </li>
+    <li>
+    Incremento del rendimiento físico y mental
+  </li>
+    <li>
+    Disminución de  dolores de cabeza y migrañas
+  </li>
+    <li>
+    Aumento de la vitalidad
+  </li>
+    <li>
+    Disminuye los niveles de estrés y ansiedad
+  </li>
+  <li>
+    Mejora de la calidad del sueño
+  </li>
+</ul>
+</p>
+<p>
+En definitiva, una columna sana y bien alineada se traduce en sentirnos bien con nuestro cuerpo y nuestra mente.
+</p>
+
+
+
+  </div>
+
+
+</div>
 
