--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,4 +1,16 @@
 // ########################################################################################################
+.avatar-large {
+  width: 56px;
+  border-radius: 50%;
+}
+
+.checked {
+  color: #fbd46d;
+}
+
+.unchecked {
+  color: #f5f5f5;
+}
 
 .container-overlay-card {
   background-size: cover;
@@ -64,12 +76,13 @@
 }
 
 .overlay-card-text {
-  color: #333333;
+  color: #88919e;
   font-size: 14px;
   position: absolute;
   top: 35%;
   left: 45%;
   line-height: 25px;
+    font-weight: lighter;
   // margin-top: 18px;
   // margin-left: 18px;
   width: 90%;
@@ -122,6 +135,7 @@
   align-content: flex-start;
   height: 55px;
   width: 390px;
+  margin-bottom: 15px;
   // border: 1px solid black;
 
   img{
@@ -182,24 +196,24 @@ width: 390px;
 
 .two-item-container{
   width: 1140px;
-  height: 80vh;
-  padding: 96px 100px;
-  margin-bottom: 50px;
+  height: 70vh;
+  // padding: 96px 100px;
+  // margin-bottom: 50px;
   border-radius: 4px;
-  background-color: #ddf2f3;
+  background-color: white;
   position: relative;
   left: 10%;
   display: flex;
   align-items: center;
   -ms-flex-wrap: wrap;
-  flex-wrap: nowrap;
+  // flex-wrap: nowrap;
   -ms-justify-content: space-between;
   justify-content: space-between;
 
     .box-1{
       width: 50%;
       width: calc(50% - (.5*30px));
-      padding: 15px;
+      // padding: 15px;
       h4{
         color: #333333;
         font-weight: 400;
@@ -212,15 +226,27 @@ width: 390px;
         margin-bottom: 24px;
         text-align: justify;
       }
+
+        li {
+        color: #88919e;
+        font-size: 14px;
+        margin-bottom: 24px;
+        line-height: 25px;
+      }
     }
     .box-2{
-      width: 50%;
+      width: auto;
       width: calc(50% - (.5*30px));
-      img{
-        width: 100%;
-        height: 100%;
-        padding-right: 10px;
-      }
+      height: 80%;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      border-radius: 5px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      position: relative;
+      padding: 40px 15px 30px 15px;
+      margin-top: 15px;
     }
 }
 
@@ -243,30 +269,47 @@ width: 390px;
       width: 50%;
       width: calc(50% - (.5*30px));
       height: 100%;
-      padding: 24px 0 40px 0;
+      padding: 44px 0 20px 0;
 
-      h3{
+      h4{
         color: #333333;
-        font-size: 24px;
+        font-weight: 400;
+        font-size: 22px;
         margin-bottom: 24px;
       }
       p {
         color: #88919e;
         font-size: 14px;
         margin-bottom: 24px;
+        text-align: justify;
+    }
+
+
+      ul {
+        color: #88919e;
+        font-size: 14px;
+        margin-bottom: 24px;
+        line-height: 25px;
       }
     }
 
     .box-2{
-      width: 50%;
+      width: auto;
       width: calc(50% - (.5*30px));
-      height: 100%;
+      height: 90%;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      border-radius: 5px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      position: relative;
 
-      img{
-        padding: 20px 0 40px 0;
-        width: 100%;
-        height: 100%;
-      }
+      // img{
+      //   padding: 20px 0 20px 0;
+      //   width: 100%;
+      //   height: 100%;
+      // }
     }
 }
 
