--- a/source/_contact.html.erb
+++ b/source/_contact.html.erb
@@ -1,17 +1,40 @@
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+
+
+<div class="container-header-white">
+  <div>
+    <p>
+    CONTACTO
+  </p>
+  </div>
+  <div class="line">
+  </div>
+</div>
+
 <div class="main-container-contact">
+
+  <div id="map"></div>
+
   <div class="contact-content">
     <p>
-        Default is 512x512 pixels. (512x512 image tiles are offset by one zoom level compared to 256x256 tiles from Mapbox Studio Classic styles. For example, 512x512 tiles at zoom level 4 are equi
+      Address: Ronda de Sant Pere, 40, 3º1ª, 08010 Barcelona, Spain                          Phone: +34 603 84 84 32
     </p>
+
     <div class="contact-icon">
       <i class="fab fa-twitter-square"></i>
       <i class="fab fa-linkedin"></i>
       <i class="fab fa-twitter-square"></i>
     </div>
   </div>
-  <div id="map"></div>
 </div>
+
+    </div>
+  </div>
+</div>
+
 
 <!--
 <script>
@@ -56,6 +79,6 @@ zoom: 9 // starting zoom
 </style>
 </head>
 <body> -->
-<div id="map"></div>
+
 
 
