--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,11 +6,10 @@
 
 
 <%= partial "sec2.html.erb" %>
-<%= partial "sec3.html.erb" %>
 <%= partial "_grid_title_items.html.erb" %>
 <%= partial "_sec4.html.erb" %>
 <%= partial "_sec5.html.erb" %>
+<%= partial "_sec6.html.erb" %>
+<%= partial "_sec7.html.erb" %>
 
-
-<%= partial "_testimonial.html.erb" %>
 <%= partial "_contact.html.erb" %>
