--- a/source/_sec5.html.erb
+++ b/source/_sec5.html.erb
@@ -11,63 +11,53 @@
 
 
 <div class="container">
-    <div id="carouselExampleControls" class="carousel vert slide" data-ride="carousel" data-interval="900">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="flex-con">
-                <img class="d-block mx-auto img-fluid car-size" src="./images/kid1.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>HJ there</h5>
-                  <p>El AJUSTE QUIROPRÁCTICO, a través de un movimiento rápido, seguro, preciso e indoloro, permite eliminar ese bloqueo vertebral, liberando de este modo los nervios y potenciando la actividad y el correcto funcionamiento de nuestro sistema nervioso.</p>
-                </div>
-                </div>
-            </div>
-            <div class="carousel-item ">
-                <img class="d-block mx-auto img-fluid car-size" src="//placehold.it/800x400/777" alt="First slide" style="border: 1px solid black;">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>HJ there</h5>
-                  <p>La quiropráctica tiene una gran variedad de técnicas que permiten trabajar de diferentes formas dependiendo de la persona que se está atendiendo. </p>
-                 </div>
-            </div>
-            <div class="carousel-item ">
-                <img class="d-block mx-auto img-fluid car-size" src="//placehold.it/800x400/dd4444/fff" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>HJ there</h5>
-                  <p>
-                      tecnicas:
-                      <ul>
-                        <li>
-                          Diversified y Gonstead
-                        </li>
-                        <li>
-                          Sacral Occipital Tecnique
-                        </li>
-                        <li>
-                          Integración bioenergética
-                        </li>
-                        <li>
-                          Método Activator
-                        </li>
-                        <li>
-                          Técnica Webster para embarazada
-                        </li>
-                      </ul>
-                  </p>
-                 </div>
-            </div>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="d-block w-100 car-img banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./images/bg-white.jpg);">
+          <div class="carousel-caption d-none d-md-block car-text">
+
+              <p>El ajuste vertebral es un movimiento rápido, preciso, seguro e indoloro que realiza el quiropráctico con las manos para devolver la alineación original a las vértebras, eliminando de este modo los bloqueos de la columna.
+              </p>
+          </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+      </div>
+
+
+      <div class="carousel-item">
+        <div class="d-block w-100 car-img banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./images/bg-white.jpg);">
+          <div class="carousel-caption d-none d-md-block car-text">
+
+              <p>Así se consiguen liberar los nervios, permitiendo a tu cerebro VER con claridad todo lo que sucede en el resto de tu cuerpo.
+  El ajuste vertebral puede realizarse de diferentes formas, haciendo uso de diversas técnicas en función de la persona que se está atendiendo.
+              </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="d-block w-100 car-img banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./images/bg-white.jpg);">
+        <div class="carousel-caption d-none d-md-block car-text">
+            <p>
+El AJUSTE QUIROPRÁCTICO, a través de un movimiento rápido, seguro, preciso e indoloro, permite eliminar ese bloqueo vertebral, liberando de este modo los nervios y potenciando la actividad y el correcto funcionamiento de nuestro sistema nervioso.
+La quiropráctica tiene una gran variedad de técnicas que permiten trabajar de diferentes formas dependiendo de la persona que se está atendiendo.
+</p>
+        </div>
+      </div>
     </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
