--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,4 +1,36 @@
 // ########################################################################################################
+.car-img{
+  height: 350px;
+  width: auto;
+
+  background-size: cover;
+  background-position: center;
+  margin: 60px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: justify;
+  font-size: 24px;
+  line-height: 28px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 9px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  position: relative;
+}
+.car-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 60px !important;
+  // p{
+  //   text-align: justify;
+  //   color: white;
+  //   font-size: 20px;
+  //   line-height: 26px;
+  // }
+}
 .avatar-large {
   width: 56px;
   border-radius: 50%;
@@ -305,11 +337,56 @@ width: 390px;
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
       position: relative;
 
-      // img{
-      //   padding: 20px 0 20px 0;
-      //   width: 100%;
-      //   height: 100%;
-      // }
+    }
+}
+
+
+.two-item-container-nopadding-2{
+  width: 1140px;
+  height: 90vh;
+  padding: 10px 0;
+  position: relative;
+  left: 10%;
+  display: flex;
+  align-items: start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: nowrap;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+
+    .box-1{
+      width: 50%;
+      width: calc(50% - (.5*30px));
+      height: 100%;
+      padding: 44px 0 20px 0;
+
+      p {
+        color: #88919e;
+        font-size: 14px;
+        margin-bottom: 24px;
+        padding-left: 20px;
+        text-align: justify;
+    }
+    }
+
+    .box-2{
+      // width: auto;
+      width: calc(50% - (.5*30px));
+      height: 60%;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      border-radius: 5px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      position: relative;
+      margin-top: 50px;
+
+      img{
+
+      width: 100%;
+      height: auto;
+      }
     }
 }
 
