--- a/source/stylesheets/components/_container.scss
+++ b/source/stylesheets/components/_container.scss
@@ -134,43 +134,56 @@
 
 .main-container-contact {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   flex-flow: nowrap;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
 }
 
 .main-container-contact #map {
-  height: 90%;
-  width: 70%;
-  margin: 24px;
+  height: 70%;
+  width: 90%;
+  margin: 8px;
+  align-self: center;
 }
 
 .main-container-contact .contact-content {
   // flex-grow: 1;
 
+  height: 20%;
+  width: 90%;
+  margin: 6px;
+  border: 1px solid #2f87cf;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
   p{
-    margin: 200px 100px 16px 20px;
-
-    color: #969ea9;
-    font-size: 14px;
+    margin-left: 30px;
+    color: #333333;
+    font-size: 20px;
+    // font-weight: bold;
     line-height: 26px;
     align-self: left;
-    padding: 10px;
+    padding-top: 20px;
     text-align: center;
   }
 
   .fab{
+    align-self: left;
     margin: 8px;
-    font-size: 40px;
-    color: #333333;
+    font-size: 30px;
+    color: #2f87cf;
   }
 }
 
-.contact-icon{
+.contact-content .contact-icon{
   display: flex;
   flex-flow: nowrap;
-  margin-left: 40px;
+  margin-left: 30px;
 }
 
 
